

4.2  sm.erl

- Functions reply_destination_address/1, reply_source_address/1 and
  reply_addresses/1 added.
  reply_address/1 will be removed in future releases, please use 
  reply_destination_address/1 instead.
- Functions udhi/1 and udhi/2 added.
- Function split_user_data/2 implemented.
- Function chop_udh/1 implemented.
- Function reference_number/1 implemented.
- Function join_user_data/1 added.
- Function total_segments/1 implemented.


4.3  gen_esme_session.erl

- New callback  handle_enquire_link_failure/3 added.
  See http://sourceforge.net/forum/forum.php?thread_id=1206343&forum_id=350015
- Use proc_lib:spawn_link/1 instead of spawn_link.
- New function reference_number/1 implemented.
- PDUs are logged using the new smpp_log event manager.
- Errors reported using the error_logger.
- New callback handle_enquire_link/3 added.
  See http://sourceforge.net/forum/forum.php?thread_id=1206343&forum_id=350015
- Use built in gen_fsm timers.


4.4  gen_esme.erl

- New callback handle_enquire_link_failure/2 added.
  See http://sourceforge.net/forum/forum.php?thread_id=1206343&forum_id=350015
- handle_alert_notification/2 must have only 2 parameters and not 3, as 
  previously declared in behaviour_info/1.
- Functions session_start_link/2 and session_start_link/3 added.
- Use proc_lib:spawn_link/1 instead of spawn_link.
- Functions submit_sm/3 and	submit_multi/3 added.
- Log utility added.  Functions open_disk_log/1, close_disk_log</a>,
  open_error_logger/1 and close_error_logger/0 implemented.

  By default neither the disk_log nor the error_logger handler are
  added to the smpp_log event manager, thus no logging is done until
  open_disk_log/1 and/or open_error_logger/1 are called.

  Please refer to smpp_log for further information about OSERL logs.

4.5  smpp_globals.hrl

- SM_MAX_SIZE and SM_SEGMENT_MAX_SIZE macros defined.


4.6  operation.erl

- Use my_lists:ukeymerge/3 in merge_params/2.